--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://selab.cw9vyspz1hnp.us-east-2.rds.amazonaws.com:3306/selab
+spring.datasource.url=jdbc:mysql://localhost:3306/se?userSSL=false
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
