--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.16.18</version>
+</dependency>
+
 	<!-- JPA Data (We are going to use Repositories, Entities, Hibernate, etc...) -->
         
         <dependency>
