--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/se?userSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=rootpass
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
