--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
 
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -24,11 +25,20 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+	
+ 
+
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		       <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
 
 		<dependency>
     <groupId>org.projectlombok</groupId>
