--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,14 @@
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
 
+		<!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
+<dependency>
+    <groupId>commons-lang</groupId>
+    <artifactId>commons-lang</artifactId>
+    <version>2.2</version>
+</dependency>
+
+
 		<dependency>
     <groupId>org.projectlombok</groupId>
     <artifactId>lombok</artifactId>
