--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.datasource.password=rootpass
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+
+server.port: 8443
+server.ssl.key-store: keystore.p12
+server.ssl.key-store-password: helloworld
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: tomcat
+
