--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,20 @@
-#spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/se?userSSL=false
+spring.jpa.hibernate.ddl-auto=none
+#spring.datasource.url=jdbc:mysql://localhost:3306/se?userSSL=false
+spring.datasource.url=jdbc:mysql://selab.cw9vyspz1hnp.us-east-2.rds.amazonaws.com:3306/selab
 spring.datasource.username=root
-spring.datasource.password=rootpass
+spring.datasource.password=password
+
+
+# Localhost
+# spring.datasource.url=jdbc:mysql://localhost:3306/se?userSSL=false
+# spring.datasource.username=root
+# spring.datasource.password=rootpass
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 
-server.port: 8443
+
 server.ssl.key-store: keystore.p12
 server.ssl.key-store-password: helloworld
 server.ssl.keyStoreType: PKCS12
