--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=none
 #spring.datasource.url=jdbc:mysql://localhost:3306/se?userSSL=false
-spring.datasource.url=jdbc:mysql://selab.cw9vyspz1hnp.us-east-2.rds.amazonaws.com:3306/selab
+spring.datasource.url=jdbc:mysql://selab.cw9vyspz1hnp.us-east-2.rds.amazonaws.com:3306/selab?userSSL=false
 spring.datasource.username=root
 spring.datasource.password=password
 
